[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/WinScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/LoseScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://resource/planet_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://resource/level_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/DeathZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/WinZone.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Level2.gd" type="Script" id=8]
[ext_resource path="res://scenes/Slime.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Spawner.gd" type="Script" id=10]

[node name="Level2" type="Node2D"]
pause_mode = 2
script = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 84, 140 )

[node name="WinScreen" parent="." instance=ExtResource( 2 )]
visible = false

[node name="LoseScreen" parent="." instance=ExtResource( 3 )]
visible = false

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.5, 0.5 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( 262144, 0, 3, 262145, 0, 65543, 262146, 0, 65543, 262147, 0, 65540, 327681, 0, 1, 327682, 0, 1, 327683, 0, 7, 327684, 0, 65540, 393217, 0, 1, 393218, 0, 1, 393219, 0, 1, 393220, 0, 7, 393221, 0, 65540, 458753, 0, 1, 458754, 0, 1, 458755, 0, 1, 458756, 0, 1, 458757, 0, 7, 458758, 0, 65540, 524289, 0, 1, 524290, 0, 1, 524291, 0, 1, 524292, 0, 1, 524293, 0, 1, 524294, 0, 7, 524295, 0, 65543, 524296, 0, 65543, 524297, 0, 65543, 524298, 0, 65543, 524299, 0, 4, 524303, 0, 3, 524304, 0, 65543, 524305, 0, 65543, 524306, 0, 65543, 524307, 0, 65543, 524308, 0, 65543, 524309, 0, 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 132.0
margin_top = 74.0
margin_right = 431.0
margin_bottom = 155.0
custom_fonts/normal_font = ExtResource( 5 )
text = "Level 2"
fit_content_height = true

[node name="WinZone" parent="." instance=ExtResource( 7 )]
position = Vector2( 1324, 512 )
scale = Vector2( 0.619, 0.564 )

[node name="DeathZone" parent="." instance=ExtResource( 6 )]
position = Vector2( 730, 693 )
scale = Vector2( 40, 3.507 )

[node name="SlimeSpawner" type="Node2D" parent="."]
pause_mode = 1
position = Vector2( 871, 265 )
script = ExtResource( 10 )
obstacle = ExtResource( 9 )
